--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/*:root {
+:root {
   --radius: 0.625rem;
 
   --background: oklch(1 0 0);
@@ -100,4 +100,3 @@
     @apply bg-background text-foreground;
   }
 }
-*/
